@@ -118,6 +118,15 @@
       <li>Vincent Danen
     </ul>
 
+  <li>Samsung
+    <ul>
+      <li>Chansup Kim
+      <li>Gyuyoung Kim
+      <li>Juhui Lee
+      <li>Sungkyu Kim
+      <li>Sungpil Son
+    </ul>
+
   <li>Ubuntu
     <ul>
       <li>Jamie Strandboge
