@@ -1,3 +1,12 @@
+2012-11-20  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
+
+        Add Samsung to security vendor member list
+        https://bugs.webkit.org/show_bug.cgi?id=102863
+
+        Reviewed by Sam Weinig.
+
+        * security/security-group-members.html: Add Samsung members.
+
 2012-10-31  Adam Barth  <abarth@webkit.org>
 
         technical-articles.html should link to my talk on how WebKit works
